frontend till login/sign up integrated with backend.
